Add PythonModules setting

--- a/ImageStitcher/App.config
+++ b/ImageStitcher/App.config
@@ -13,6 +13,9 @@
             <setting name="ScriptPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="PythonModules" serializeAs="String">
+                <value />
+            </setting>
         </ImageStitcher.Settings>
     </applicationSettings>
 </configuration>
