--- a/ImageStitcher/Settings.settings
+++ b/ImageStitcher/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="ScriptPath" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="PythonModules" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
