--- a/ImageStitcher/Settings.settings
+++ b/ImageStitcher/Settings.settings
@@ -2,14 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ImageStitcher" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="PythonPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="ScriptPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="PythonModules" Type="System.String" Scope="Application">
-      <Value Profile="(Default)" />
+    <Setting Name="Threshold" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">200</Value>
     </Setting>
   </Settings>
 </SettingsFile>
