--- a/ImageStitcher/App.config
+++ b/ImageStitcher/App.config
@@ -1,21 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="ImageStitcher.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ImageStitcher.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <applicationSettings>
+    <userSettings>
         <ImageStitcher.Settings>
-            <setting name="PythonPath" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="ScriptPath" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="PythonModules" serializeAs="String">
-                <value />
+            <setting name="Threshold" serializeAs="String">
+                <value>200</value>
             </setting>
         </ImageStitcher.Settings>
-    </applicationSettings>
+    </userSettings>
 </configuration>
